--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,31 +1,74 @@
-$theme-colors: (
-  "primary": #ffff ,
-  "danger": #333333,
 
-);
+$primary: #f1e6e2;
+$pink: #F5BCBA;
+$secondary: #ED585A;
+$yellow: #ffc107;
+$fontcolor: #2A2547;
+
+$font:"halyard display",calibri light, sans-serif;
+$bigfont-size: 55px ;
+$smallfont-size: 35px ;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
-
-p{
-  margin-top: 100px;
+body {
+  background: $primary;
 }
-.text {
-  width: 460px;
-  margin: 50px auto 0 auto;
-  background-color: #fff;
-  text-align: center;
+h1, h2, h3, h4, h5, p, li{
+  font-family: $font;
 }
 
-.container {
-  width: 460px;
-  margin: 20px auto;
-  padding: 20px;
-  /*border: 1px solid #000;*/
-  background-color: #fff;
+nav {
+    background-color: $primary;
+    color: $fontcolor;
+  .navbar-light .navbar-nav .nav-link {
+    font-family: $font;
+    color: $fontcolor!important;
+  }
+  .navbar-toggler {
+    border-color: transparent;
+  }
+  .navbar-brand {
+    font-family: $font;
+  }
+  #navbarNav {
+    justify-content: flex-end;
+  }
 }
 
+.statistikkode {
+  h4 {
+    font-size: 24px;
+    font-weight: 400;
+    padding-right: 10px;
+  }
+  .programmer-kode {
+    .progress {
+      height: 5rem;
+      font-size: 0.85rem;
+      background-color: $pink;
+      .progress-bar {
+        background: $secondary;
+        color: white;
+        font-family: $font;
+        height: 20px;
+      }
+    }
+  }
+}
 
-.ghost, .message {
-  font-size: 10em;
-  text-align: center;
+.om-mig2 {
+  .edu {
+      color: $fontcolor;
+    ul {
+      margin: 0 25px 25px 25px;
+      border-left: 4px solid $yellow;
+      padding: 40px 0 10px 14px;
+
+      li {
+        font-size: 18px;
+        color: $fontcolor;
+        padding-bottom: 10px;
+      }
+    }
+  }
 }
